--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ h3 {
 	font-weight: bold;
 }
  .planets {
-	background-color: blue;
+	background-color: #000000;
 	color: #ffffff;
 	font-weight: bold;
 	font-size: 1.5em;
