--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ h3 {
 	text-align: center;
 }
  .maintable {
-	border: 5px solid #000000;
+	border: 0 solid #000000;
 	padding: 0;
 	width: 75%;
 	height: 75%;
