--- a/css/style.css
+++ b/css/style.css
@@ -16,10 +16,10 @@ h3 {
 	text-align: center;
 }
  .maintable {
-	border: 0 solid #000000;
-	padding: 0;
-	width: 75%;
-	height: 75%;
+	border: 1.0em solid #000000;
+	padding: 1.0em;
+	width: 90%;
+	height: 90%;
 	text-align: left;
 	margin-left: 100px; 
 	margin-right: 100px;
