--- a/css/style.css
+++ b/css/style.css
@@ -31,12 +31,16 @@ h3 {
 	color: #FFFFFF;
 	background-color: #000000;
 	font-weight: bold;
-	 padding: 5.0em
+	 padding: 5.0em;
+	 padding-left: 25px;
+	 padding-right: 25px;
 }
  td {
 	border: 1px solid #FFFFFF;
 	font-family: 'Bangers', cursive;
 	color: #FFFFFF;
+	 padding-left: 25px;
+	 padding-right: 25px;
 	background-color: #000000;
 }
  th {
