--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ h3 {
 }
  .maintable {
 	border: 1.0em solid #000000;
-	padding: 5.0em;
+	padding: 0;
 	width: 100%;
 	height: 100%;
 	text-align: left;
