--- a/css/style.css
+++ b/css/style.css
@@ -21,9 +21,9 @@ h3 {
 	width: 100%;
 	height: 100%;
 	text-align: left;
-	margin-left: 100px; 
-	margin-right: 100px;
-	table-layout: auto;
+	margin-left: auto; 
+	margin-right: auto;
+	table-layout: fixed;
 }
  .firsttablerow {
 	border: 1px solid #FFFFFF;
