--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@ body {
 	text-align:center;
 	background-image:url('galaxy.jpg');
 	background-size:cover;
+	background-repeat: no-repeat;
+	background-position: center;
 }
  h1 {
 	font-family: 'Shadows Into Light', cursive;
